# chord-parser

./: CHANGELOG.md  README.md  chord-parser.cabal
app/: Main.hs
app/Domain/: ContentItem.hs  PropertyStmt.hs  Song.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
