cabal-version:      3.0
name:               chord-parser
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Alvarocz
maintainer:         alvaroczxp@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable chord-parser
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0
                    , text ^>=2.0.1
                    , data-default ^>=0.7.1
                    , megaparsec ^>=9.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules: Domain.Song
                   Domain.ContentItem
                   Domain.PropertyStmt
